// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> handles events 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    isConnected={true}
    showTerms={
      [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
    whiteListed={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="hamburger-btn "
          onClick={[Function]}
        >
          <div />
          <div />
          <div />
        </div>,
        <Link
          onClick={[Function]}
          replace={false}
          to="/"
        >
          <img
            alt="logo"
            className="nav-logo"
            height="30px"
            src="./dda-logo.png"
            width="30px"
          />
        </Link>,
        <ul
          className="hide-nav"
          id="mobile-nav"
        >
          <li>
            <Link
              className="nav-link"
              onClick={[Function]}
              replace={false}
              to="/portfolio"
            >
              Portfolio
            </Link>
          </li>
          <li>
            <Link
              className="nav-link"
              onClick={[Function]}
              replace={false}
              to="/bulletin"
            >
              Bulletin
            </Link>
          </li>
          <li>
            <Link
              className="nav-link"
              onClick={[Function]}
              replace={false}
              to="/how-to"
            >
              How To
            </Link>
          </li>
          <li>
            <p
              className="nav-link"
              onClick={[Function]}
            >
              Terms
            </p>
          </li>
        </ul>,
        <div
          className="connection-status"
        >
          <div
            className="connected"
          >
            Connected
            <span
              style={
                Object {
                  "color": "green",
                  "paddingLeft": "5px",
                }
              }
            >
              <i
                className="fas fa-circle"
              />
            </span>
          </div>
        </div>,
      ],
      "id": "header-nav",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div />,
            <div />,
            <div />,
          ],
          "className": "hamburger-btn ",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <img
            alt="logo"
            className="nav-logo"
            height="30px"
            src="./dda-logo.png"
            width="30px"
          />,
          "onClick": [Function],
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "logo",
            "className": "nav-logo",
            "height": "30px",
            "src": "./dda-logo.png",
            "width": "30px",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/portfolio"
              >
                Portfolio
              </Link>
            </li>,
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/bulletin"
              >
                Bulletin
              </Link>
            </li>,
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/how-to"
              >
                How To
              </Link>
            </li>,
            <li>
              <p
                className="nav-link"
                onClick={[Function]}
              >
                Terms
              </p>
            </li>,
          ],
          "className": "hide-nav",
          "id": "mobile-nav",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/portfolio"
              >
                Portfolio
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Portfolio",
                "className": "nav-link",
                "onClick": [Function],
                "replace": false,
                "to": "/portfolio",
              },
              "ref": null,
              "rendered": "Portfolio",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/bulletin"
              >
                Bulletin
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Bulletin",
                "className": "nav-link",
                "onClick": [Function],
                "replace": false,
                "to": "/bulletin",
              },
              "ref": null,
              "rendered": "Bulletin",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/how-to"
              >
                How To
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "How To",
                "className": "nav-link",
                "onClick": [Function],
                "replace": false,
                "to": "/how-to",
              },
              "ref": null,
              "rendered": "How To",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="nav-link"
                onClick={[Function]}
              >
                Terms
              </p>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Terms",
                "className": "nav-link",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Terms",
              "type": "p",
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="connected"
            >
              Connected
              <span
                style={
                  Object {
                    "color": "green",
                    "paddingLeft": "5px",
                  }
                }
              >
                <i
                  className="fas fa-circle"
                />
              </span>
            </div>,
            false,
            false,
          ],
          "className": "connection-status",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Connected",
                <span
                  style={
                    Object {
                      "color": "green",
                      "paddingLeft": "5px",
                    }
                  }
                >
                  <i
                    className="fas fa-circle"
                  />
                </span>,
              ],
              "className": "connected",
            },
            "ref": null,
            "rendered": Array [
              "Connected",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <i
                    className="fas fa-circle"
                  />,
                  "style": Object {
                    "color": "green",
                    "paddingLeft": "5px",
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "fas fa-circle",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
                "type": "span",
              },
            ],
            "type": "div",
          },
          false,
          false,
        ],
        "type": "div",
      },
    ],
    "type": "nav",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="hamburger-btn "
            onClick={[Function]}
          >
            <div />
            <div />
            <div />
          </div>,
          <Link
            onClick={[Function]}
            replace={false}
            to="/"
          >
            <img
              alt="logo"
              className="nav-logo"
              height="30px"
              src="./dda-logo.png"
              width="30px"
            />
          </Link>,
          <ul
            className="hide-nav"
            id="mobile-nav"
          >
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/portfolio"
              >
                Portfolio
              </Link>
            </li>
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/bulletin"
              >
                Bulletin
              </Link>
            </li>
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/how-to"
              >
                How To
              </Link>
            </li>
            <li>
              <p
                className="nav-link"
                onClick={[Function]}
              >
                Terms
              </p>
            </li>
          </ul>,
          <div
            className="connection-status"
          >
            <div
              className="connected"
            >
              Connected
              <span
                style={
                  Object {
                    "color": "green",
                    "paddingLeft": "5px",
                  }
                }
              >
                <i
                  className="fas fa-circle"
                />
              </span>
            </div>
          </div>,
        ],
        "id": "header-nav",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div />,
              <div />,
              <div />,
            ],
            "className": "hamburger-btn ",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <img
              alt="logo"
              className="nav-logo"
              height="30px"
              src="./dda-logo.png"
              width="30px"
            />,
            "onClick": [Function],
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "logo",
              "className": "nav-logo",
              "height": "30px",
              "src": "./dda-logo.png",
              "width": "30px",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/portfolio"
                >
                  Portfolio
                </Link>
              </li>,
              <li>
                <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/bulletin"
                >
                  Bulletin
                </Link>
              </li>,
              <li>
                <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/how-to"
                >
                  How To
                </Link>
              </li>,
              <li>
                <p
                  className="nav-link"
                  onClick={[Function]}
                >
                  Terms
                </p>
              </li>,
            ],
            "className": "hide-nav",
            "id": "mobile-nav",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/portfolio"
                >
                  Portfolio
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Portfolio",
                  "className": "nav-link",
                  "onClick": [Function],
                  "replace": false,
                  "to": "/portfolio",
                },
                "ref": null,
                "rendered": "Portfolio",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/bulletin"
                >
                  Bulletin
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Bulletin",
                  "className": "nav-link",
                  "onClick": [Function],
                  "replace": false,
                  "to": "/bulletin",
                },
                "ref": null,
                "rendered": "Bulletin",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/how-to"
                >
                  How To
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "How To",
                  "className": "nav-link",
                  "onClick": [Function],
                  "replace": false,
                  "to": "/how-to",
                },
                "ref": null,
                "rendered": "How To",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="nav-link"
                  onClick={[Function]}
                >
                  Terms
                </p>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Terms",
                  "className": "nav-link",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Terms",
                "type": "p",
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="connected"
              >
                Connected
                <span
                  style={
                    Object {
                      "color": "green",
                      "paddingLeft": "5px",
                    }
                  }
                >
                  <i
                    className="fas fa-circle"
                  />
                </span>
              </div>,
              false,
              false,
            ],
            "className": "connection-status",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Connected",
                  <span
                    style={
                      Object {
                        "color": "green",
                        "paddingLeft": "5px",
                      }
                    }
                  >
                    <i
                      className="fas fa-circle"
                    />
                  </span>,
                ],
                "className": "connected",
              },
              "ref": null,
              "rendered": Array [
                "Connected",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <i
                      className="fas fa-circle"
                    />,
                    "style": Object {
                      "color": "green",
                      "paddingLeft": "5px",
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "fas fa-circle",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                  "type": "span",
                },
              ],
              "type": "div",
            },
            false,
            false,
          ],
          "type": "div",
        },
      ],
      "type": "nav",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Header /> renders connected not whitelisted 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    isConnected={true}
    showTerms={[MockFunction]}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
    whiteListed={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="hamburger-btn "
          onClick={[Function]}
        >
          <div />
          <div />
          <div />
        </div>,
        <Link
          onClick={[Function]}
          replace={false}
          to="/"
        >
          <img
            alt="logo"
            className="nav-logo"
            height="30px"
            src="./dda-logo.png"
            width="30px"
          />
        </Link>,
        <ul
          className="hide-nav"
          id="mobile-nav"
        >
          <li>
            <Link
              className="nav-link"
              onClick={[Function]}
              replace={false}
              to="/portfolio"
            >
              Portfolio
            </Link>
          </li>
          <li>
            <Link
              className="nav-link"
              onClick={[Function]}
              replace={false}
              to="/bulletin"
            >
              Bulletin
            </Link>
          </li>
          <li>
            <Link
              className="nav-link"
              onClick={[Function]}
              replace={false}
              to="/how-to"
            >
              How To
            </Link>
          </li>
          <li>
            <p
              className="nav-link"
              onClick={[Function]}
            >
              Terms
            </p>
          </li>
        </ul>,
        <div
          className="connection-status"
        >
          <div
            className="connected"
          >
            Connected
            <span
              style={
                Object {
                  "color": "yellow",
                  "paddingLeft": "5px",
                }
              }
            >
              <i
                className="fas fa-circle"
              />
            </span>
          </div>
        </div>,
      ],
      "id": "header-nav",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div />,
            <div />,
            <div />,
          ],
          "className": "hamburger-btn ",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <img
            alt="logo"
            className="nav-logo"
            height="30px"
            src="./dda-logo.png"
            width="30px"
          />,
          "onClick": [Function],
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "logo",
            "className": "nav-logo",
            "height": "30px",
            "src": "./dda-logo.png",
            "width": "30px",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/portfolio"
              >
                Portfolio
              </Link>
            </li>,
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/bulletin"
              >
                Bulletin
              </Link>
            </li>,
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/how-to"
              >
                How To
              </Link>
            </li>,
            <li>
              <p
                className="nav-link"
                onClick={[Function]}
              >
                Terms
              </p>
            </li>,
          ],
          "className": "hide-nav",
          "id": "mobile-nav",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/portfolio"
              >
                Portfolio
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Portfolio",
                "className": "nav-link",
                "onClick": [Function],
                "replace": false,
                "to": "/portfolio",
              },
              "ref": null,
              "rendered": "Portfolio",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/bulletin"
              >
                Bulletin
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Bulletin",
                "className": "nav-link",
                "onClick": [Function],
                "replace": false,
                "to": "/bulletin",
              },
              "ref": null,
              "rendered": "Bulletin",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/how-to"
              >
                How To
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "How To",
                "className": "nav-link",
                "onClick": [Function],
                "replace": false,
                "to": "/how-to",
              },
              "ref": null,
              "rendered": "How To",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="nav-link"
                onClick={[Function]}
              >
                Terms
              </p>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Terms",
                "className": "nav-link",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Terms",
              "type": "p",
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            false,
            <div
              className="connected"
            >
              Connected
              <span
                style={
                  Object {
                    "color": "yellow",
                    "paddingLeft": "5px",
                  }
                }
              >
                <i
                  className="fas fa-circle"
                />
              </span>
            </div>,
            false,
          ],
          "className": "connection-status",
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Connected",
                <span
                  style={
                    Object {
                      "color": "yellow",
                      "paddingLeft": "5px",
                    }
                  }
                >
                  <i
                    className="fas fa-circle"
                  />
                </span>,
              ],
              "className": "connected",
            },
            "ref": null,
            "rendered": Array [
              "Connected",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <i
                    className="fas fa-circle"
                  />,
                  "style": Object {
                    "color": "yellow",
                    "paddingLeft": "5px",
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "fas fa-circle",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
                "type": "span",
              },
            ],
            "type": "div",
          },
          false,
        ],
        "type": "div",
      },
    ],
    "type": "nav",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="hamburger-btn "
            onClick={[Function]}
          >
            <div />
            <div />
            <div />
          </div>,
          <Link
            onClick={[Function]}
            replace={false}
            to="/"
          >
            <img
              alt="logo"
              className="nav-logo"
              height="30px"
              src="./dda-logo.png"
              width="30px"
            />
          </Link>,
          <ul
            className="hide-nav"
            id="mobile-nav"
          >
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/portfolio"
              >
                Portfolio
              </Link>
            </li>
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/bulletin"
              >
                Bulletin
              </Link>
            </li>
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/how-to"
              >
                How To
              </Link>
            </li>
            <li>
              <p
                className="nav-link"
                onClick={[Function]}
              >
                Terms
              </p>
            </li>
          </ul>,
          <div
            className="connection-status"
          >
            <div
              className="connected"
            >
              Connected
              <span
                style={
                  Object {
                    "color": "yellow",
                    "paddingLeft": "5px",
                  }
                }
              >
                <i
                  className="fas fa-circle"
                />
              </span>
            </div>
          </div>,
        ],
        "id": "header-nav",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div />,
              <div />,
              <div />,
            ],
            "className": "hamburger-btn ",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <img
              alt="logo"
              className="nav-logo"
              height="30px"
              src="./dda-logo.png"
              width="30px"
            />,
            "onClick": [Function],
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "logo",
              "className": "nav-logo",
              "height": "30px",
              "src": "./dda-logo.png",
              "width": "30px",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/portfolio"
                >
                  Portfolio
                </Link>
              </li>,
              <li>
                <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/bulletin"
                >
                  Bulletin
                </Link>
              </li>,
              <li>
                <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/how-to"
                >
                  How To
                </Link>
              </li>,
              <li>
                <p
                  className="nav-link"
                  onClick={[Function]}
                >
                  Terms
                </p>
              </li>,
            ],
            "className": "hide-nav",
            "id": "mobile-nav",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/portfolio"
                >
                  Portfolio
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Portfolio",
                  "className": "nav-link",
                  "onClick": [Function],
                  "replace": false,
                  "to": "/portfolio",
                },
                "ref": null,
                "rendered": "Portfolio",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/bulletin"
                >
                  Bulletin
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Bulletin",
                  "className": "nav-link",
                  "onClick": [Function],
                  "replace": false,
                  "to": "/bulletin",
                },
                "ref": null,
                "rendered": "Bulletin",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/how-to"
                >
                  How To
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "How To",
                  "className": "nav-link",
                  "onClick": [Function],
                  "replace": false,
                  "to": "/how-to",
                },
                "ref": null,
                "rendered": "How To",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="nav-link"
                  onClick={[Function]}
                >
                  Terms
                </p>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Terms",
                  "className": "nav-link",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Terms",
                "type": "p",
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              false,
              <div
                className="connected"
              >
                Connected
                <span
                  style={
                    Object {
                      "color": "yellow",
                      "paddingLeft": "5px",
                    }
                  }
                >
                  <i
                    className="fas fa-circle"
                  />
                </span>
              </div>,
              false,
            ],
            "className": "connection-status",
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Connected",
                  <span
                    style={
                      Object {
                        "color": "yellow",
                        "paddingLeft": "5px",
                      }
                    }
                  >
                    <i
                      className="fas fa-circle"
                    />
                  </span>,
                ],
                "className": "connected",
              },
              "ref": null,
              "rendered": Array [
                "Connected",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <i
                      className="fas fa-circle"
                    />,
                    "style": Object {
                      "color": "yellow",
                      "paddingLeft": "5px",
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "fas fa-circle",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                  "type": "span",
                },
              ],
              "type": "div",
            },
            false,
          ],
          "type": "div",
        },
      ],
      "type": "nav",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Header /> renders not connected and not whitelisted 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    isConnected={false}
    showTerms={[MockFunction]}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
    whiteListed={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="hamburger-btn "
          onClick={[Function]}
        >
          <div />
          <div />
          <div />
        </div>,
        <Link
          onClick={[Function]}
          replace={false}
          to="/"
        >
          <img
            alt="logo"
            className="nav-logo"
            height="30px"
            src="./dda-logo.png"
            width="30px"
          />
        </Link>,
        <ul
          className="hide-nav"
          id="mobile-nav"
        >
          <li>
            <Link
              className="nav-link"
              onClick={[Function]}
              replace={false}
              to="/portfolio"
            >
              Portfolio
            </Link>
          </li>
          <li>
            <Link
              className="nav-link"
              onClick={[Function]}
              replace={false}
              to="/bulletin"
            >
              Bulletin
            </Link>
          </li>
          <li>
            <Link
              className="nav-link"
              onClick={[Function]}
              replace={false}
              to="/how-to"
            >
              How To
            </Link>
          </li>
          <li>
            <p
              className="nav-link"
              onClick={[Function]}
            >
              Terms
            </p>
          </li>
        </ul>,
        <div
          className="connection-status"
        >
          <div
            className="connected"
          >
            Not Connected
            <span
              style={
                Object {
                  "color": "red",
                  "paddingLeft": "5px",
                }
              }
            >
              <i
                className="fas fa-circle"
              />
            </span>
          </div>
        </div>,
      ],
      "id": "header-nav",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div />,
            <div />,
            <div />,
          ],
          "className": "hamburger-btn ",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <img
            alt="logo"
            className="nav-logo"
            height="30px"
            src="./dda-logo.png"
            width="30px"
          />,
          "onClick": [Function],
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "logo",
            "className": "nav-logo",
            "height": "30px",
            "src": "./dda-logo.png",
            "width": "30px",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/portfolio"
              >
                Portfolio
              </Link>
            </li>,
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/bulletin"
              >
                Bulletin
              </Link>
            </li>,
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/how-to"
              >
                How To
              </Link>
            </li>,
            <li>
              <p
                className="nav-link"
                onClick={[Function]}
              >
                Terms
              </p>
            </li>,
          ],
          "className": "hide-nav",
          "id": "mobile-nav",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/portfolio"
              >
                Portfolio
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Portfolio",
                "className": "nav-link",
                "onClick": [Function],
                "replace": false,
                "to": "/portfolio",
              },
              "ref": null,
              "rendered": "Portfolio",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/bulletin"
              >
                Bulletin
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Bulletin",
                "className": "nav-link",
                "onClick": [Function],
                "replace": false,
                "to": "/bulletin",
              },
              "ref": null,
              "rendered": "Bulletin",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/how-to"
              >
                How To
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "How To",
                "className": "nav-link",
                "onClick": [Function],
                "replace": false,
                "to": "/how-to",
              },
              "ref": null,
              "rendered": "How To",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="nav-link"
                onClick={[Function]}
              >
                Terms
              </p>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Terms",
                "className": "nav-link",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Terms",
              "type": "p",
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            false,
            false,
            <div
              className="connected"
            >
              Not Connected
              <span
                style={
                  Object {
                    "color": "red",
                    "paddingLeft": "5px",
                  }
                }
              >
                <i
                  className="fas fa-circle"
                />
              </span>
            </div>,
          ],
          "className": "connection-status",
        },
        "ref": null,
        "rendered": Array [
          false,
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Not Connected",
                <span
                  style={
                    Object {
                      "color": "red",
                      "paddingLeft": "5px",
                    }
                  }
                >
                  <i
                    className="fas fa-circle"
                  />
                </span>,
              ],
              "className": "connected",
            },
            "ref": null,
            "rendered": Array [
              "Not Connected",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <i
                    className="fas fa-circle"
                  />,
                  "style": Object {
                    "color": "red",
                    "paddingLeft": "5px",
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "fas fa-circle",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
                "type": "span",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "nav",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="hamburger-btn "
            onClick={[Function]}
          >
            <div />
            <div />
            <div />
          </div>,
          <Link
            onClick={[Function]}
            replace={false}
            to="/"
          >
            <img
              alt="logo"
              className="nav-logo"
              height="30px"
              src="./dda-logo.png"
              width="30px"
            />
          </Link>,
          <ul
            className="hide-nav"
            id="mobile-nav"
          >
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/portfolio"
              >
                Portfolio
              </Link>
            </li>
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/bulletin"
              >
                Bulletin
              </Link>
            </li>
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/how-to"
              >
                How To
              </Link>
            </li>
            <li>
              <p
                className="nav-link"
                onClick={[Function]}
              >
                Terms
              </p>
            </li>
          </ul>,
          <div
            className="connection-status"
          >
            <div
              className="connected"
            >
              Not Connected
              <span
                style={
                  Object {
                    "color": "red",
                    "paddingLeft": "5px",
                  }
                }
              >
                <i
                  className="fas fa-circle"
                />
              </span>
            </div>
          </div>,
        ],
        "id": "header-nav",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div />,
              <div />,
              <div />,
            ],
            "className": "hamburger-btn ",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <img
              alt="logo"
              className="nav-logo"
              height="30px"
              src="./dda-logo.png"
              width="30px"
            />,
            "onClick": [Function],
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "logo",
              "className": "nav-logo",
              "height": "30px",
              "src": "./dda-logo.png",
              "width": "30px",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/portfolio"
                >
                  Portfolio
                </Link>
              </li>,
              <li>
                <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/bulletin"
                >
                  Bulletin
                </Link>
              </li>,
              <li>
                <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/how-to"
                >
                  How To
                </Link>
              </li>,
              <li>
                <p
                  className="nav-link"
                  onClick={[Function]}
                >
                  Terms
                </p>
              </li>,
            ],
            "className": "hide-nav",
            "id": "mobile-nav",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/portfolio"
                >
                  Portfolio
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Portfolio",
                  "className": "nav-link",
                  "onClick": [Function],
                  "replace": false,
                  "to": "/portfolio",
                },
                "ref": null,
                "rendered": "Portfolio",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/bulletin"
                >
                  Bulletin
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Bulletin",
                  "className": "nav-link",
                  "onClick": [Function],
                  "replace": false,
                  "to": "/bulletin",
                },
                "ref": null,
                "rendered": "Bulletin",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/how-to"
                >
                  How To
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "How To",
                  "className": "nav-link",
                  "onClick": [Function],
                  "replace": false,
                  "to": "/how-to",
                },
                "ref": null,
                "rendered": "How To",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="nav-link"
                  onClick={[Function]}
                >
                  Terms
                </p>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Terms",
                  "className": "nav-link",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Terms",
                "type": "p",
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              false,
              false,
              <div
                className="connected"
              >
                Not Connected
                <span
                  style={
                    Object {
                      "color": "red",
                      "paddingLeft": "5px",
                    }
                  }
                >
                  <i
                    className="fas fa-circle"
                  />
                </span>
              </div>,
            ],
            "className": "connection-status",
          },
          "ref": null,
          "rendered": Array [
            false,
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Not Connected",
                  <span
                    style={
                      Object {
                        "color": "red",
                        "paddingLeft": "5px",
                      }
                    }
                  >
                    <i
                      className="fas fa-circle"
                    />
                  </span>,
                ],
                "className": "connected",
              },
              "ref": null,
              "rendered": Array [
                "Not Connected",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <i
                      className="fas fa-circle"
                    />,
                    "style": Object {
                      "color": "red",
                      "paddingLeft": "5px",
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "fas fa-circle",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                  "type": "span",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "nav",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Header /> renders the component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    isConnected={true}
    showTerms={[MockFunction]}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
    whiteListed={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="hamburger-btn "
          onClick={[Function]}
        >
          <div />
          <div />
          <div />
        </div>,
        <Link
          onClick={[Function]}
          replace={false}
          to="/"
        >
          <img
            alt="logo"
            className="nav-logo"
            height="30px"
            src="./dda-logo.png"
            width="30px"
          />
        </Link>,
        <ul
          className="hide-nav"
          id="mobile-nav"
        >
          <li>
            <Link
              className="nav-link"
              onClick={[Function]}
              replace={false}
              to="/portfolio"
            >
              Portfolio
            </Link>
          </li>
          <li>
            <Link
              className="nav-link"
              onClick={[Function]}
              replace={false}
              to="/bulletin"
            >
              Bulletin
            </Link>
          </li>
          <li>
            <Link
              className="nav-link"
              onClick={[Function]}
              replace={false}
              to="/how-to"
            >
              How To
            </Link>
          </li>
          <li>
            <p
              className="nav-link"
              onClick={[Function]}
            >
              Terms
            </p>
          </li>
        </ul>,
        <div
          className="connection-status"
        >
          <div
            className="connected"
          >
            Connected
            <span
              style={
                Object {
                  "color": "green",
                  "paddingLeft": "5px",
                }
              }
            >
              <i
                className="fas fa-circle"
              />
            </span>
          </div>
        </div>,
      ],
      "id": "header-nav",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div />,
            <div />,
            <div />,
          ],
          "className": "hamburger-btn ",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <img
            alt="logo"
            className="nav-logo"
            height="30px"
            src="./dda-logo.png"
            width="30px"
          />,
          "onClick": [Function],
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "logo",
            "className": "nav-logo",
            "height": "30px",
            "src": "./dda-logo.png",
            "width": "30px",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/portfolio"
              >
                Portfolio
              </Link>
            </li>,
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/bulletin"
              >
                Bulletin
              </Link>
            </li>,
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/how-to"
              >
                How To
              </Link>
            </li>,
            <li>
              <p
                className="nav-link"
                onClick={[Function]}
              >
                Terms
              </p>
            </li>,
          ],
          "className": "hide-nav",
          "id": "mobile-nav",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/portfolio"
              >
                Portfolio
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Portfolio",
                "className": "nav-link",
                "onClick": [Function],
                "replace": false,
                "to": "/portfolio",
              },
              "ref": null,
              "rendered": "Portfolio",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/bulletin"
              >
                Bulletin
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Bulletin",
                "className": "nav-link",
                "onClick": [Function],
                "replace": false,
                "to": "/bulletin",
              },
              "ref": null,
              "rendered": "Bulletin",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/how-to"
              >
                How To
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "How To",
                "className": "nav-link",
                "onClick": [Function],
                "replace": false,
                "to": "/how-to",
              },
              "ref": null,
              "rendered": "How To",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="nav-link"
                onClick={[Function]}
              >
                Terms
              </p>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Terms",
                "className": "nav-link",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Terms",
              "type": "p",
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="connected"
            >
              Connected
              <span
                style={
                  Object {
                    "color": "green",
                    "paddingLeft": "5px",
                  }
                }
              >
                <i
                  className="fas fa-circle"
                />
              </span>
            </div>,
            false,
            false,
          ],
          "className": "connection-status",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Connected",
                <span
                  style={
                    Object {
                      "color": "green",
                      "paddingLeft": "5px",
                    }
                  }
                >
                  <i
                    className="fas fa-circle"
                  />
                </span>,
              ],
              "className": "connected",
            },
            "ref": null,
            "rendered": Array [
              "Connected",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <i
                    className="fas fa-circle"
                  />,
                  "style": Object {
                    "color": "green",
                    "paddingLeft": "5px",
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "fas fa-circle",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
                "type": "span",
              },
            ],
            "type": "div",
          },
          false,
          false,
        ],
        "type": "div",
      },
    ],
    "type": "nav",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="hamburger-btn "
            onClick={[Function]}
          >
            <div />
            <div />
            <div />
          </div>,
          <Link
            onClick={[Function]}
            replace={false}
            to="/"
          >
            <img
              alt="logo"
              className="nav-logo"
              height="30px"
              src="./dda-logo.png"
              width="30px"
            />
          </Link>,
          <ul
            className="hide-nav"
            id="mobile-nav"
          >
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/portfolio"
              >
                Portfolio
              </Link>
            </li>
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/bulletin"
              >
                Bulletin
              </Link>
            </li>
            <li>
              <Link
                className="nav-link"
                onClick={[Function]}
                replace={false}
                to="/how-to"
              >
                How To
              </Link>
            </li>
            <li>
              <p
                className="nav-link"
                onClick={[Function]}
              >
                Terms
              </p>
            </li>
          </ul>,
          <div
            className="connection-status"
          >
            <div
              className="connected"
            >
              Connected
              <span
                style={
                  Object {
                    "color": "green",
                    "paddingLeft": "5px",
                  }
                }
              >
                <i
                  className="fas fa-circle"
                />
              </span>
            </div>
          </div>,
        ],
        "id": "header-nav",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div />,
              <div />,
              <div />,
            ],
            "className": "hamburger-btn ",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <img
              alt="logo"
              className="nav-logo"
              height="30px"
              src="./dda-logo.png"
              width="30px"
            />,
            "onClick": [Function],
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "logo",
              "className": "nav-logo",
              "height": "30px",
              "src": "./dda-logo.png",
              "width": "30px",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/portfolio"
                >
                  Portfolio
                </Link>
              </li>,
              <li>
                <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/bulletin"
                >
                  Bulletin
                </Link>
              </li>,
              <li>
                <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/how-to"
                >
                  How To
                </Link>
              </li>,
              <li>
                <p
                  className="nav-link"
                  onClick={[Function]}
                >
                  Terms
                </p>
              </li>,
            ],
            "className": "hide-nav",
            "id": "mobile-nav",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/portfolio"
                >
                  Portfolio
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Portfolio",
                  "className": "nav-link",
                  "onClick": [Function],
                  "replace": false,
                  "to": "/portfolio",
                },
                "ref": null,
                "rendered": "Portfolio",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/bulletin"
                >
                  Bulletin
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Bulletin",
                  "className": "nav-link",
                  "onClick": [Function],
                  "replace": false,
                  "to": "/bulletin",
                },
                "ref": null,
                "rendered": "Bulletin",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/how-to"
                >
                  How To
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "How To",
                  "className": "nav-link",
                  "onClick": [Function],
                  "replace": false,
                  "to": "/how-to",
                },
                "ref": null,
                "rendered": "How To",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="nav-link"
                  onClick={[Function]}
                >
                  Terms
                </p>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Terms",
                  "className": "nav-link",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Terms",
                "type": "p",
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="connected"
              >
                Connected
                <span
                  style={
                    Object {
                      "color": "green",
                      "paddingLeft": "5px",
                    }
                  }
                >
                  <i
                    className="fas fa-circle"
                  />
                </span>
              </div>,
              false,
              false,
            ],
            "className": "connection-status",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Connected",
                  <span
                    style={
                      Object {
                        "color": "green",
                        "paddingLeft": "5px",
                      }
                    }
                  >
                    <i
                      className="fas fa-circle"
                    />
                  </span>,
                ],
                "className": "connected",
              },
              "ref": null,
              "rendered": Array [
                "Connected",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <i
                      className="fas fa-circle"
                    />,
                    "style": Object {
                      "color": "green",
                      "paddingLeft": "5px",
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "fas fa-circle",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                  "type": "span",
                },
              ],
              "type": "div",
            },
            false,
            false,
          ],
          "type": "div",
        },
      ],
      "type": "nav",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
